# wrightomega-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: bench.rs  bench_python.py
example/: Cargo.toml
example/src/: main.rs
src/: lib.rs  wright.rs  wright_omega.rs
